replace strings with URL